--- a/css/styles.css
+++ b/css/styles.css
@@ -443,6 +443,81 @@ audio{
 	background-repeat: no-repeat;
 	background-size: contain;
 }
-.s10 .a05{
+
+
+
+.arrow{
+	background: url(../images/icon_up.png);
+	background-size: contain;
+	background-position: center ;
+	background-repeat: no-repeat;
+
+	position: absolute;
+	width: 100%;
+	height: 20px;
 	
+	bottom: 5%;
+	z-index: 10;
+	-webkit-animation:  mymove 1s linear infinite;
+	-o-animation:  mymove 1s linear infinite;
+	animation:  mymove 1s linear infinite;
+}
+@-webkit-keyframes mymove {
+	0% { -webkit-transform: translateY(100%);
+	-ms-transform: translateY(100%);
+	-o-transform: translateY(100%);
+	transform: translateY(100%);
+	opacity: 0;
+}
+	50% { -webkit-transform: translateY(50%);
+	-ms-transform: translateY(50%);
+	-o-transform: translateY(50%);
+	transform: translateY(50%);
+	opacity: 1;
+	}
+	100% { -webkit-transform: (10%);
+	-ms-transform: (10%);
+	-o-transform: (10%);
+	transform: (10%);
+	opacity: 0;
+	}
+}
+@keyframes mymove {
+	0% { -webkit-transform: translateY(100%); transform: translateY(100%); opacity:0;}
+	50% { -webkit-transform: translateY(0%); transform: translateY(0%); opacity:1;}
+	100% { -webkit-transform: translateY(-100%); transform: translateY(-100%); opacity:0;}
+}
+.off{background: none !important;}
+.off .yinyue{
+	-webkit-animation:none;
+	animation:none;
+}
+.off .sc-yinyue{
+	display: none;
+}
+.yinyue{
+	background:url(../images/music_off.png);
+	background-size:cover;
+	height:33px;
+	width:33px;
+	position:absolute;
+	right:20px;
+	top:20px;
+	-webkit-animation: rotating 1.2s linear infinite;
+		-moz-animation: rotating 1.2s linear infinite;
+		  -o-animation: rotating 1.2s linear infinite;
+			 animation: rotating 1.2s linear infinite;}
+
+@-webkit-keyframes rotating{
+	from{-webkit-transform:rotate(0deg)}
+	to{-webkit-transform:rotate(360deg)}
+}
+@keyframes rotating{
+	from{transform:rotate(0deg)}
+	to{transform:rotate(360deg)}
+}
+@-moz-keyframes rotating
+{
+	from{-moz-transform:rotate(0deg)}
+	to{-moz-transform:rotate(360deg)}
 }
